# kungfu

./: .pre-commit-config.yaml  pyproject.toml  readme.md
.github/workflows/: ci.yml
docs/: advanced.md  index.md  option.md  result.md  unwrapping.md  variative.md
examples/: mappings.py  misc.py  option_unwrapping.py  pattern_matching.py  quasi_functor.py  sum.py  unwrapping.py
fntypes/: __init__.py
kungfu/: __init__.py
kungfu/utilities/: __init__.py  annotations.py  log_factory.py  misc.py  runtime_generic.py
kungfu/utilities/singleton/: __init__.py
tests/: caching_test.py  lazy_coro_result_test.py  misc_test.py  result_test.py  sum_test.py  test_unwrap_error.py  typing_test.py  unwrapping_test.py  variative_test.py
